--- a/ContactUs.html
+++ b/ContactUs.html
@@ -6,19 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GiftAByte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fonts/Inter/Inter-VariableFont_slnt,wght.ttf">
+    <link rel="stylesheet" href="assets/fonts/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf">
+    <link rel="stylesheet" href="assets/fonts/Roboto/Roboto-Regular.ttf">
+    <link rel="stylesheet" href="assets/fonts/East_Sea_Dokdo/EastSeaDokdo-Regular.ttf">
 </head>
 <body>
     <!-- Navbar Menu -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="/assets/images/hamburger.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          <a class="navbar-brand" href="#"><img src="assets/images/hamburger.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
             Gift-A-Byte</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
               <a class="nav-link" href="Gallery.html">Gallery</a>
               <a class="nav-link" href="About.html">About</a>
               <a class="nav-link" href="ContactUs.html">Contact Us</a>
