--- a/About.html
+++ b/About.html
@@ -23,9 +23,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               <a class="nav-link" href="Gallery.html">Gallery</a>
-              <a class="nav-link" href="About.html">About</a>
+              <a class="nav-link" href="#">About</a>
               <a class="nav-link" href="ContactUs.html">Contact Us</a>
             </div>
           </div>
