--- a/Gallery.html
+++ b/Gallery.html
@@ -15,18 +15,23 @@
 <body>
     <!-- Navbar Menu -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a id="brnd" class="navbar-brand" href="#"><img src="assets/images/hamburger.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <div class="container-fluid mx-2">
+          <a id="brnd" class="navbar-brand" href="#"><img src="assets/images/hamburger.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
             Gift-A-Byte</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               <a class="nav-link" href="#">Gallery</a>
               <a class="nav-link" href="About.html">About</a>
-              <a class="nav-link" href="ContactUs.html">Contact Us</a>
+              <a class="nav-link" href="Contact.html">Contact</a>
+              <form class="container-fluid mt-1">
+                <!-- <button class="btn btn-outline-success me-2" type="button">Main button</button> -->
+                <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button>
+                <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button>
+              </form>
             </div>
           </div>
         </div>
