--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Help us fight hunger in our community by donating non-perishable food items to our food bank. Your kindness will make a difference for families facing food insecurity.">
     <title>GiftAByte</title>
     <link href="assets/css/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -11,10 +12,11 @@
     <link rel="stylesheet" href="assets/fonts/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf">
     <link rel="stylesheet" href="assets/fonts/Roboto/Roboto-Regular.ttf">
     <link rel="stylesheet" href="assets/fonts/East_Sea_Dokdo/EastSeaDokdo-Regular.ttf">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar Menu -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid mx-2">
           <a id="brnd" class="navbar-brand" href="#"><img src="assets/images/hamburger.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
             Gift-A-Byte</a>
@@ -36,35 +38,71 @@
           </div>
         </div>
       </nav>
+   
 
-
-    <h1 id="hm-heading">Home</h1>
-
-
-    <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            Column
+    <!-- Carousel -->
+    <section>
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/slide4.webp" class="d-block w-100 set-img-height" alt="Food distribution in Assam">
+            <div class="carousel-caption carousel-caption-height d-none d-md-block">
+              <h3>Food Distribution in Assam</h3>
+              <p>
+                During the recent flood in Assam, our organization worked 
+                to distribute food and other necessary supplies to those 
+                affected by the disaster. We recognized the urgent need for 
+                assistance and knew that we had the resources and capabilities 
+                to make a difference.
+              </p>
+            </div>
           </div>
-          <div class="col">
-            Column
+          <div class="carousel-item">
+            <img src="assets/images/slide6.webp" class="d-block w-100 set-img-height" alt="Food donation in public school">
+            <div class="carousel-caption carousel-caption-height d-none d-md-block">
+              <h3>Covid Relief Activities</h3>
+              <p>Our donations helped to provide nutritious
+                 meals to those who may have otherwise gone without, 
+                 and reduced the burden on organizations working to feed those in need 
+                 during this difficult time. We are proud to have been able to 
+                 contribute to these efforts and make a difference in our community.</p>
+            </div>
           </div>
-          <div class="col">
-            Column
+          <div class="carousel-item">
+            <img src="assets/images/slide5.webp" class="d-block w-100 set-img-height" alt="donation in village">
+            <div class="carousel-caption carousel-caption-height d-none d-md-block">
+              <h3>Providing Food to Local Public Schools</h3>
+              <p>
+                We donated a variety of non-perishable food items, 
+                including canned goods and dried goods, to the school. 
+                These items were distributed to students and families 
+                in need, ensuring that they had access to nutritious meals 
+                during this challenging time.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="row">
-            <div class="col">
-              Column
-            </div>
-            <div class="col">
-              Column
-            </div>
-            <div class="col">
-              Column
-            </div>
-          </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
+  
+    </section>
+    <section>
+      <div class="container" id="secnd">
+
+      </div>
+    </section>
 
 
 
