--- a/index.html
+++ b/index.html
@@ -42,62 +42,69 @@
 
     <!-- Carousel -->
     <section>
-      <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col px-5">
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/images/slide1.webp" class="d-block w-100 set-img-height" alt="Food distribution in Assam">
+                  <div class="carousel-caption carousel-caption-height d-none d-md-block">
+                    <h3>Food Distribution in Assam</h3>
+                    <p>
+                      During the recent flood in Assam, our organization worked 
+                      to distribute food and other necessary supplies to those 
+                      affected by the disaster. We recognized the urgent need for 
+                      assistance and knew that we had the resources and capabilities 
+                      to make a difference.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/slide2.webp" class="d-block w-100 set-img-height" alt="Food donation in public school">
+                  <div class="carousel-caption carousel-caption-height d-none d-md-block">
+                    <h3>Covid Relief Activities</h3>
+                    <p>Our donations helped to provide nutritious
+                       meals to those who may have otherwise gone without, 
+                       and reduced the burden on organizations working to feed those in need 
+                       during this difficult time. We are proud to have been able to 
+                       contribute to these efforts and make a difference in our community.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/slide3.webp" class="d-block w-100 set-img-height" alt="donation in village">
+                  <div class="carousel-caption carousel-caption-height d-none d-md-block">
+                    <h3>Providing Food to Local Public Schools</h3>
+                    <p>
+                      We donated a variety of non-perishable food items, 
+                      including canned goods and dried goods, to the school. 
+                      These items were distributed to students and families 
+                      in need, ensuring that they had access to nutritious meals 
+                      during this challenging time.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/images/slide1.webp" class="d-block w-100 set-img-height" alt="Food distribution in Assam">
-            <div class="carousel-caption carousel-caption-height d-none d-md-block">
-              <h3>Food Distribution in Assam</h3>
-              <p>
-                During the recent flood in Assam, our organization worked 
-                to distribute food and other necessary supplies to those 
-                affected by the disaster. We recognized the urgent need for 
-                assistance and knew that we had the resources and capabilities 
-                to make a difference.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/images/slide2.webp" class="d-block w-100 set-img-height" alt="Food donation in public school">
-            <div class="carousel-caption carousel-caption-height d-none d-md-block">
-              <h3>Covid Relief Activities</h3>
-              <p>Our donations helped to provide nutritious
-                 meals to those who may have otherwise gone without, 
-                 and reduced the burden on organizations working to feed those in need 
-                 during this difficult time. We are proud to have been able to 
-                 contribute to these efforts and make a difference in our community.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/images/slide3.webp" class="d-block w-100 set-img-height" alt="donation in village">
-            <div class="carousel-caption carousel-caption-height d-none d-md-block">
-              <h3>Providing Food to Local Public Schools</h3>
-              <p>
-                We donated a variety of non-perishable food items, 
-                including canned goods and dried goods, to the school. 
-                These items were distributed to students and families 
-                in need, ensuring that they had access to nutritious meals 
-                during this challenging time.
-              </p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-  
     </section>
+
+    
     <section>
       <div class="container" id="secnd">
 
